# sqltestdata

./: .gitignore  README.md  pyproject.toml
src/sqltestdata/: gen_outbox_data.py  gen_user_data.py  models.py
